--- a/README.textile
+++ b/README.textile
@@ -14,7 +14,7 @@ pre. ~$ mkdir pylucid_plugins
 ~/pylucid_plugins$ git clone git://github.com/jedie/PyLucid-system-information-plugin.git
 ~/pylucid_plugins$ ln -s ~/pylucid_plugins/PyLucid-system-information-plugin/system_information ~/PyLucid_env/src/pylucid/pylucid_project/external_plugins/
 
-If you don't have git, but suversion, you can checkout with this command:
+If you don't have git, but subversion, you can checkout with this command:
 
 pre. ~/pylucid_plugins$ svn checkout http://svn.github.com/jedie/PyLucid-system-information-plugin.git
 
